--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "Swoole Development Group",
+            "name": "Open Swoole Group",
             "email": "hello@swoole.co.uk"
         }
     ],
