Moved `friendsofphp/php-cs-fixer` to dev-dependencies, as it should not be installed by consumers of this package

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "hello@swoole.co.uk"
         }
     ],
-    "require": {
+    "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.3"
     }
 }
