--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Open Swoole Group",
-            "email": "hello@swoole.co.uk"
+            "email": "hello@openswoole.com"
         }
     ],
     "require-dev": {
