--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "hello@openswoole.com"
         }
     ],
+    "require": {
+        "php": ">=7.4"
+    },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.3"
     }
